syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SystemLanguageCodeService {
	rpc GetSystemLanguageCode(LanguIdRequest9) returns (SystemLanguageCode);
	rpc GetSystemLanguageCodes(google.protobuf.Empty) returns (SystemLanguageCodes);
	rpc AddSystemLanguageCodes(SystemLanguageCodes) returns (google.protobuf.Empty);
	rpc UpdateSystemLanguageCode(SystemLanguageCodes) returns (google.protobuf.Empty);
	rpc DeleteSystemLanguageCode(SystemLanguageCodes) returns (google.protobuf.Empty);
}

message LanguIdRequest9 {
	string LanguageID = 1;
}

message SystemLanguageCode {
	string LanguageID = 1;
	string Name = 2;
	string NativeName = 3;
}

message SystemLanguageCodes {
	repeated SystemLanguageCode SystLangCd = 1;
}

